...
                android:text="@string/ingredients"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/secondary_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:text="@string/steps"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/secondary_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
...
