...
                android:gravity="center"
                android:textColor="@android:color/primary_text_light"
                android:textSize="@dimen/secondary_text_size"
                tools:text="@string/app_name" />

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/exo_player_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/poster_height" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/image_no_video"
                android:layout_width="match_parent"
...
